<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="com.yylx.hearingaid.fragments.NoiseReFragment">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_close_noise_sup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_noise_suppression"/>

        <RadioButton
            android:id="@+id/radioButton_method1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/method_one"/>

        <RadioButton
            android:id="@+id/radioButton_method2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/method_two"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/material_blue_grey_950"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/method_one"
            android:textColor="@color/black_500"
            android:textSize="@dimen/text_size_large"/>

        <Button
            android:id="@+id/btn_comfirm_para_method_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/confirm_parameters"
            android:textSize="@dimen/text_size_medium"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B0:"/>

        <EditText
            android:id="@+id/edittext_b0"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="B1:"/>

        <EditText
            android:id="@+id/edittext_b1"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="(场景分类参数)"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threshold_one"/>

        <EditText
            android:id="@+id/edittext_thr1"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/threshold_two"/>

        <EditText
            android:id="@+id/edittext_thr2"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/material_blue_grey_950"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/method_two"
            android:textColor="@color/black_500"
            android:textSize="@dimen/text_size_large"/>

        <Button
            android:id="@+id/btn_comfirm_para_method_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/confirm_parameters"
            android:textSize="@dimen/text_size_medium"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_smooth_factor"/>

        <EditText
            android:id="@+id/edittext_psf"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/speech_threshold"/>

        <EditText
            android:id="@+id/edittext_speech_threshold"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SNR_coefficient"/>

        <EditText
            android:id="@+id/edittext_snr_coefficient"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/gain_function_smooth_factor"/>

        <EditText
            android:id="@+id/edittext_gfsf"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>
</LinearLayout>
