<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context="com.yylx.hearingaid.fragments.LoudComFragment">

    <!-- title -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView_switchHint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/open_loudness_compensation"
            android:textColor="@color/black_700"
            android:textSize="@dimen/text_size_large"/>

        <Switch
            android:id="@+id/switch_loudness_compensation"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/textView_switchHint"/>
    </RelativeLayout>

    <!-- channels control-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/channels_control"
        android:textColor="@color/black_700"
        android:textSize="@dimen/text_size_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/LinearLayout_channel_control_vertical">

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="1:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_1"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="2:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_2"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="3:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_3"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="4:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_4"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout_channel_control_vertical">

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="5:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_5"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="6:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_6"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="7:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_7"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="8:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_8"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout_channel_control_vertical">

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="9:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_9"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="10:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_10"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="11:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_11"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="12:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_12"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayout_channel_control_vertical">

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="13:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_13"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="14:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_14"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="15:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_15"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout_channel_control_switchItem">

                <TextView
                    style="@style/TextView_channel_control_switchItem"
                    android:text="16:"/>

                <com.yylx.hearingaid.views.checkbox.CheckBox
                    android:id="@+id/checkBox_16"
                    style="@style/CheckBox_channel_control_switchItem">
                </com.yylx.hearingaid.views.checkbox.CheckBox>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_open_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/open_all_channel"/>

        <Button
            android:id="@+id/button_close_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/close_all_channel"/>
    </LinearLayout>
</LinearLayout>
